--- a/Clean Swift/Scene.xctemplate/TemplateInfo.plist
+++ b/Clean Swift/Scene.xctemplate/TemplateInfo.plist
@@ -130,6 +130,20 @@
 			<key>Type</key>
 			<string>static</string>
     </dict>
+	<dict>
+			<key>Default</key>
+			<string>___VARIABLE_sceneName:identifier___Protocols</string>
+			<key>Description</key>
+			<string>The protocol file name</string>
+			<key>Identifier</key>
+			<string>protocolFileName</string>
+			<key>Name</key>
+			<string>Protocol File Name:</string>
+			<key>Required</key>
+			<true/>
+			<key>Type</key>
+			<string>static</string>
+    </dict>
 		<dict>
 			<key>Default</key>
 			<string>UIViewController</string>
